Add navigation div

--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
   <body>
     <div>
       <h1>Broadway Design</h1>
+      <p><a href="#home">Home</a></p>
+      <p><a href="#about">About</a></p>
+      <p><a href="#work">Work</a></p>
+      <p><a href="#team">Team</a></p>
+      <p><a href="#contact">Contact</a></p>
     </div>
   </body>
 </html>
