--- a/index.html
+++ b/index.html
@@ -8,10 +8,22 @@
     <div>
       <h1>Broadway Design</h1>
       <p><a href="#home">Home</a></p>
-      <p><a href="#about">About</a></p>
-      <p><a href="#work">Work</a></p>
+      <p><a href="#process">About</a></p>
+      <p><a href="#portfolio">Work</a></p>
       <p><a href="#team">Team</a></p>
       <p><a href="#contact">Contact</a></p>
+    </div>
+    <div id="process">
+      <h2>Our Process</h2>
+      <img src="./resources/images/identify.svg"/>
+      <h3>Identify</h3>
+      <p>We focus on the most important details.</p>
+      <img src="./resources/images/understand.svg"/>
+      <h3>Understand</h3>
+      <p>We study our projects inside and out.</p>
+      <img src="./resources/images/execute.svg"/>
+      <h3>Execute</h3>
+      <p>We put everything we have into our work</p>
     </div>
   </body>
 </html>
