--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <div>
-      <h1>Broadway Design</h1>
+      <h1 id="home">Broadway Design</h1>
       <p><a href="#home">Home</a></p>
       <p><a href="#process">About</a></p>
       <p><a href="#portfolio">Work</a></p>
@@ -25,5 +25,26 @@
       <h3>Execute</h3>
       <p>We put everything we have into our work</p>
     </div>
+    <div>
+      <h2>Designed in New York</h2>
+    </div>
+    <div>
+      <h3>Portfolio</h3>
+      <p>Coming Soon</p>
+      <h3>Team</h3>
+      <p>We're Hiring!</p>
+      <h3>Contact</h3>
+      <p>Phone: (555)-555-5555</p>
+      <p>E-mail: test@example.com</p>
+      <p>Twitter: @test</p>
+    </div>
+    <footer>
+      <span>© Broadway 2017</span>
+      <a href="#home">Home</a>
+      <a href="#process">About</a>
+      <a href="#portfolio">Work</a>
+      <a href="#team">Team</a>
+      <a href="#contact">Contact</a>
+    </footer>
   </body>
 </html>
