Complete basic css except nav bar

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Broadway Design</title>
-    <link href="./resources/css/style.css" type="type/css" rel="stylesheet">
+    <link href="./resources/css/style.css" type="text/css" rel="stylesheet">
   </head>
   <body>
     <div>
@@ -14,29 +14,29 @@
       <p><a href="#contact">Contact</a></p>
     </div>
     <div id="process">
-      <h2>Our Process</h2>
+      <h2 id="subtitle">Our Process</h2>
       <img src="./resources/images/identify.svg"/>
       <h3>Identify</h3>
-      <p>We focus on the most important details.</p>
+      <p class="support-text">We focus on the most important details.</p>
       <img src="./resources/images/understand.svg"/>
       <h3>Understand</h3>
-      <p>We study our projects inside and out.</p>
+      <p class="support-text">We study our projects inside and out.</p>
       <img src="./resources/images/execute.svg"/>
       <h3>Execute</h3>
-      <p>We put everything we have into our work</p>
+      <p class="support-text">We put everything we have into our work</p>
     </div>
     <div>
-      <h2>Designed in New York</h2>
+      <h2 id="subtitle-two">Designed in New York</h2>
     </div>
     <div>
-      <h3>Portfolio</h3>
-      <p>Coming Soon</p>
-      <h3>Team</h3>
-      <p>We're Hiring!</p>
-      <h3>Contact</h3>
-      <p>Phone: (555)-555-5555</p>
-      <p>E-mail: test@example.com</p>
-      <p>Twitter: @test</p>
+      <h3 id="portfolio">Portfolio</h3>
+      <p class="support-text">Coming Soon</p>
+      <h3 id="team">Team</h3>
+      <p class="support-text">We're Hiring!</p>
+      <h3 id="contact">Contact</h3>
+      <p class="support-text">Phone: (555)-555-5555</p>
+      <p class="support-text">E-mail: test@example.com</p>
+      <p class="support-text">Twitter: @test</p>
     </div>
     <footer>
       <span>© Broadway 2017</span>
