Finish project broadway

--- a/index.html
+++ b/index.html
@@ -5,13 +5,23 @@
     <link href="./resources/css/style.css" type="text/css" rel="stylesheet">
   </head>
   <body>
-    <div>
-      <h1 id="home">Broadway Design</h1>
-      <p><a href="#home">Home</a></p>
-      <p><a href="#process">About</a></p>
-      <p><a href="#portfolio">Work</a></p>
-      <p><a href="#team">Team</a></p>
-      <p><a href="#contact">Contact</a></p>
+    <div class="hero">
+      <h1>Broadway Design</h1>
+      <p>
+        <a class="btn-nav" href="#">Home</a>
+      </p>
+      <p>
+        <a class="btn-nav" href="#process">Process</a>
+      </p>
+      <p>
+        <a class="btn-nav" href="#work">Work</a>
+      </p>
+      <p>
+        <a class="btn-nav" href="#team">Team</a>
+      </p>
+      <p>
+        <a class="btn-nav" href="#contact">Contact</a>
+      </p>
     </div>
     <div id="process">
       <h2 id="subtitle">Our Process</h2>
@@ -29,7 +39,7 @@
       <h2 id="subtitle-two">Designed in New York</h2>
     </div>
     <div>
-      <h3 id="portfolio">Portfolio</h3>
+      <h3 id="work">Portfolio</h3>
       <p class="support-text">Coming Soon</p>
       <h3 id="team">Team</h3>
       <p class="support-text">We're Hiring!</p>
@@ -40,11 +50,11 @@
     </div>
     <footer>
       <span>© Broadway 2017</span>
-      <a href="#home">Home</a>
-      <a href="#process">About</a>
-      <a href="#portfolio">Work</a>
-      <a href="#team">Team</a>
-      <a href="#contact">Contact</a>
+      <a class="btn-nav" href="#">Home</a>
+      <a class="btn-nav" href="#process">About</a>
+      <a class="btn-nav" href="#work">Work</a>
+      <a class="btn-nav" href="#team">Team</a>
+      <a class="btn-nav" href="#contact">Contact</a>
     </footer>
   </body>
 </html>
